2004-09-10  David Sedeño <david@alderia.com>

	* src/main_window_cb.c (on_treeview1_button_press_event):
	  return False if can open the default application in double click.

2004-09-08  David Sedeño <david@alderia.com>

	* src/main_window_cb.c (new_download):
	  Dont free mime var. This fix a crash.
	  Dont add the download to the download list 
	  (already added).

2004-09-05  David Sedeño <david@alderia.com>

	* src/main_window.c (on_treeview_drag_received): 
	  Fix compilation build with gcc 2.95 (Jens Granseuer).

2004-08-31  David Sedeño <david@alderia.com>

	* pixmaps/Makefile.am: Fix icon installation.
	* gwget.desktop.in: Icon gwget.png instead of gwget/gwget.png.
 
2004-08-29  David Sedeño <david@alderia.com>

	* configure.in: Added fr to ALL_LINGUAS.

2004-08-24  Jarkko Ranta  <jjranta@cc.joensuu.fi>

	* configure.in: Added fi to ALL_LINGUAS.

2004-08-21  Miloslav Trmac  <mitr@volny.cz>

	* configure.in: Added cs to ALL_LINGUAS.

2004-08-20  David Sedeño <david@alderia.com>

	* configure.in: Version 0.14

2004-08-18  Estêvão Samuel Procópio  <tevaum@cvs.gnome.org>

	* configure.in: Added pt_BR to ALL_LINGUAS.
	* ChangeLog: Converted from ISO-8859 to UTF-8.

2004-08-17  David Sedeño <david@alderia.com>

	* data/gwget.glade: some UI fixes. 
	* src/utils.c (run_dialog): Set title in bold.
	Thanks to Pedro Villavicencio for both patches.

2004-08-16  David Sedeño <david@alderia.com>

	* data/preferences.glade: Change "No create directories" 
	 to "Don't create directories"

2004-08-14  David Sedeño <david@alderia.com>

	* src/systray.c (systray_clicked): Hide main window
	  when clicked if main window is visble.

2004-08-14  David Sedeño <david@alderia.com>

	* data/about.glade, data/gwget.glade, 
	  data/preferences.glade: Fix some translations
	* main_window_cb_c: "inactive" instead of "not running"

2004-08-14  Duarte Loreto <happyguy_pt@hotmail.com>

	* configure.in: Added Portuguese (pt) to ALL_LINGUAS.

2004-08-14  Adam Weinberger  <adamw@gnome.org>
