@@ -1,3 +1,9 @@
+2004-09-11  David Sedeño <david@alderia.com>
+
+	* src/main_window_cb.c (on_boton_pref_clicked):
+	Apply state of limit_speed_check and resume_at_start
+	(Julien.Cegarra).
+
 2004-09-10  David Sedeño <david@alderia.com>
 
 	* src/main_window_cb.c (on_treeview1_button_press_event):
